--- a/docker/dbt/Dockerfile
+++ b/docker/dbt/Dockerfile
@@ -1,19 +1,29 @@
 FROM python:3.10-slim
 
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     git \
-    gcc \
-    g++ \
     && rm -rf /var/lib/apt/lists/*
 
+# Set working directory
+WORKDIR /usr/app
+
+# Install dbt and clickhouse adapter
 RUN pip install --no-cache-dir \
     dbt-core==1.7.4 \
     dbt-clickhouse==1.7.2 \
-    clickhouse-driver==0.2.6 \
-    clickhouse-cityhash \
-    lz4 \
-    "protobuf>=3.20,<5"
+    clickhouse-driver \
+    clickhouse-cityhash
 
-WORKDIR /usr/app/dbt
+# Create dbt directory structure
+RUN mkdir -p /usr/app/dbt
 
-ENTRYPOINT ["dbt"]
+# Set environment variables
+ENV DBT_PROFILES_DIR=/usr/app/dbt
+
+# Copy dbt project files (will be mounted as volume)
+COPY entrypoint.sh /usr/app/entrypoint.sh
+RUN chmod +x /usr/app/entrypoint.sh
+
+ENTRYPOINT ["/usr/app/entrypoint.sh"]
+CMD ["tail", "-f", "/dev/null"]
